Toolbar buttons change color and icons become off-centered after using the Reload Scripts operator #58683

Closed
opened 2018-12-04 05:42:21 +01:00 by eldee smith · 24 comments

System Information
Operating system: Window 10
Graphics card: 1080ti

Blender Version
Broken: a205493426, blender2.8, 2018-12-3 00:27
Working: d891c8f1f8, blender2.8, 2018-11-23 13:41

Short description of error
Toolbar buttons change color and icons become off-centered after using the Reload Scripts operator

Exact steps for others to reproduce the error

  • Open Blender, and ensure Left Toolbar is visible: T
  • Observe correct looking icons and buttons.screenshot.156.jpg
  • Use the "Reload scripts" operator (search menu: F3, "Reload Scripts")
  • Observe light-grey buttons and shifted icons.screenshot.157.jpg
**System Information** Operating system: Window 10 Graphics card: 1080ti **Blender Version** Broken: a205493426b, blender2.8, 2018-12-3 00:27 Working: d891c8f1f80, blender2.8, 2018-11-23 13:41 **Short description of error** Toolbar buttons change color and icons become off-centered after using the Reload Scripts operator **Exact steps for others to reproduce the error** - Open Blender, and ensure Left Toolbar is visible: **T** - Observe correct looking icons and buttons.![screenshot.156.jpg](https://archive.blender.org/developer/F5807116/screenshot.156.jpg) - Use the "Reload scripts" operator (search menu: **F3**, "Reload Scripts") - Observe light-grey buttons and shifted icons.![screenshot.157.jpg](https://archive.blender.org/developer/F5807121/screenshot.157.jpg)
Author

Added subscriber: @testure

Added subscriber: @testure

#67940 was marked as duplicate of this issue

#67940 was marked as duplicate of this issue

#67644 was marked as duplicate of this issue

#67644 was marked as duplicate of this issue

#66227 was marked as duplicate of this issue

#66227 was marked as duplicate of this issue

#64479 was marked as duplicate of this issue

#64479 was marked as duplicate of this issue

#60741 was marked as duplicate of this issue

#60741 was marked as duplicate of this issue

#58656 was marked as duplicate of this issue

#58656 was marked as duplicate of this issue

Added subscriber: @viduttam

Added subscriber: @viduttam

Hey Eldee, Thanks for reporting this! This issue can be reproduced positively and still exists in the latest Blender 2.8 build 1b6a394d86

Hey Eldee, Thanks for reporting this! This issue can be reproduced positively and still exists in the latest Blender 2.8 build 1b6a394d862

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This is a fairly harmless bug, only the draw-style changes because WM_OT_tool_set_by_name pointer is re-allocated.

This is a fairly harmless bug, only the draw-style changes because `WM_OT_tool_set_by_name` pointer is re-allocated.

Added subscriber: @AFWS

Added subscriber: @AFWS

Mine can be merged or closed. I posted the same thing around 10 hrs earlier. This only seems to happen with the single or double icon layout.

https://developer.blender.org/T58656

Mine can be merged or closed. I posted the same thing around 10 hrs earlier. This only seems to happen with the single or double icon layout. https://developer.blender.org/T58656

Added subscribers: @LucasVeber, @JacquesLucke

Added subscribers: @LucasVeber, @JacquesLucke

Added subscriber: @Mephisto

Added subscriber: @Mephisto
Member

Added subscriber: @DanielGrauer

Added subscriber: @DanielGrauer

Added subscriber: @ChristopherAnderssarian

Added subscriber: @ChristopherAnderssarian

Added subscriber: @Hotox

Added subscriber: @Hotox

Added subscriber: @NumesSanguis-3

Added subscriber: @NumesSanguis-3

Added subscriber: @darknoon

Added subscriber: @darknoon

This issue was referenced by ba90d2efa5

This issue was referenced by ba90d2efa58fe23a87f98e014bcc02ea951a6a49

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Alexander Gavrilov self-assigned this 2019-09-29 08:56:31 +02:00

This issue was referenced by 68c2f7a2d0

This issue was referenced by 68c2f7a2d06fa1146f862e4f0959d9aeb60d7456

This issue was referenced by 5940f6b3d9

This issue was referenced by 5940f6b3d9cfa99a1b893b6149d36ee0a8c51584
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58683
No description provided.